# jrnl

./: .gitignore  BUILD.md  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  EXAMPLES.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md  UI.md  analytics.py
_codeql_build_dir/jrnl_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/jrnl_autogen/YPKJ5OE7LN/: moc_EntryEditor.cpp.d  moc_EntryList.cpp.d  moc_MainWindow.cpp.d  moc_VaultSelector.cpp.d
examples/: README.md  analyze_vault.py  tech-notes.md  welcome.md
include/: filemanager.h  journalentry.h  mainwindow.h  markdowneditor.h  pythonintegration.h
src/: filemanager.cpp  journalentry.cpp  main.cpp  mainwindow.cpp  markdowneditor.cpp
src/core/: Entry.cpp  Entry.h  SearchEngine.cpp  SearchEngine.h  Storage.cpp  Storage.h  Vault.cpp  Vault.h
src/ui/: EntryEditor.cpp  EntryEditor.h  EntryList.cpp  EntryList.h  MainWindow.cpp  MainWindow.h  VaultSelector.cpp  VaultSelector.h
